--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,10 @@
                 margin-right: auto;
                 margin-lef: auto;
             }
+            .error{
+                color: red;
+                text-align: center;
+            }
         </style>
     </head>
 <body>
