--- a/templates/blog.html
+++ b/templates/blog.html
@@ -4,5 +4,6 @@
     <hr />
         <h2>{{blog_title}}</h2>
         <p>{{blog_body}}</p>
+        <p>Written by <a href=/single_user?id={{user_id}}>{{username}}</a></p>
     <hr />
 {% endblock %}
