--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,8 @@
     <label for='password'>PassWord</label>
     <input name='password' id='password' type='password' value='{{password}}' /> <br />
     <input type='submit' value='LogIn' />
+    <br/>
+    <p>If you aren't signed up already, you can do so <a href='/signup'>here</a>.</p>
 </form>
 <p class="error">{{error_msg}}</p>
 
