Final Submit. It's now or never!

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,7 @@
             <li><a href='/login'>Login</a></li>
             <li><a href='/logout'>Logout</a></li>
             <li><a href='/'>Main Page</a></li>
+            <li><a href='/blog'>All Posts</a></li>
             <li><a href='/newpost'>New Post</a></li>
         </ul>
     </nav>
